@startuml Library Architecture - Component Diagram
!theme plain
title Generated Project Architecture - Component Relationships

package "Generated Microservices" {
    
    package "User Service (back-ms-users)" {
        package "Domain Layer" {
            component "User" as UserDomain
            component "Location" as LocationDomain
            component "City" as CityDomain
            component "Country" as CountryDomain
            component "Region" as RegionDomain
            component "Neighborhood" as NeighborhoodDomain
            component "EntityStatus" as EntityStatusUser
            
            interface "UserUseCase" as UserUC
            interface "LocationUseCase" as LocationUC
            
            interface "UserRepositoryPort" as UserRP
            interface "LocationRepositoryPort" as LocationRP
            interface "CityRepositoryPort" as CityRP
            interface "CountryRepositoryPort" as CountryRP
            interface "RegionRepositoryPort" as RegionRP
            interface "NeighborhoodRepositoryPort" as NeighborhoodRP
        }
        
        package "Application Layer" {
            component "UserService" as UserSvc
            component "LocationService" as LocationSvc
            
            component "UserMapper" as UserMap
            component "LocationMapper" as LocationMap
            component "CityMapper" as CityMap
            component "CountryMapper" as CountryMap
            component "RegionMapper" as RegionMap
            component "NeighborhoodMapper" as NeighborhoodMap
            
            package "User DTOs" {
                component "CreateUserRequestContent"
                component "GetUserResponseContent"
                component "UpdateUserRequestContent"
                component "ListUsersResponseContent"
            }
            
            package "Location DTOs" {
                component "CreateLocationRequestContent"
                component "GetRegionsByCountryResponseContent"
                component "GetCitiesByRegionResponseContent"
                component "GetNeighborhoodsByCityResponseContent"
            }
        }
        
        package "Infrastructure Layer" {
            component "UserController" as UserCtrl
            component "LocationController" as LocationCtrl
            
            component "UserRepositoryAdapter" as UserRA
            component "LocationRepositoryAdapter" as LocationRA
            component "CityRepositoryAdapter" as CityRA
            component "CountryRepositoryAdapter" as CountryRA
            component "RegionRepositoryAdapter" as RegionRA
            component "NeighborhoodRepositoryAdapter" as NeighborhoodRA
            
            component "JpaUserRepository" as UserJPA
            component "JpaLocationRepository" as LocationJPA
            component "JpaCityRepository" as CityJPA
            component "JpaCountryRepository" as CountryJPA
            component "JpaRegionRepository" as RegionJPA
            component "JpaNeighborhoodRepository" as NeighborhoodJPA
            
            component "UserDbo" as UserDBO
            component "LocationDbo" as LocationDBO
            component "CityDbo" as CityDBO
            component "CountryDbo" as CountryDBO
            component "RegionDbo" as RegionDBO
            component "NeighborhoodDbo" as NeighborhoodDBO
        }
    }
    
    package "Movie Service (back-ms-movies)" {
        package "Domain Layer" {
            component "Movie" as MovieDomain
            component "Rental" as RentalDomain
            component "EntityStatus" as EntityStatusMovie
            
            interface "MovieUseCase" as MovieUC
            interface "RentalUseCase" as RentalUC
            
            interface "MovieRepositoryPort" as MovieRP
            interface "RentalRepositoryPort" as RentalRP
        }
        
        package "Application Layer" {
            component "MovieService" as MovieSvc
            component "RentalService" as RentalSvc
            
            component "MovieMapper" as MovieMap
            component "RentalMapper" as RentalMap
            
            package "Movie DTOs" {
                component "CreateMovieRequestContent"
                component "GetMovieResponseContent"
                component "UpdateMovieRequestContent"
                component "ListMoviesResponseContent"
            }
            
            package "Rental DTOs" {
                component "CreateRentalRequestContent"
                component "GetRentalResponseContent"
                component "UpdateRentalRequestContent"
                component "ListRentalsResponseContent"
            }
        }
        
        package "Infrastructure Layer" {
            component "MovieController" as MovieCtrl
            component "RentalController" as RentalCtrl
            
            component "MovieRepositoryAdapter" as MovieRA
            component "RentalRepositoryAdapter" as RentalRA
            
            component "JpaMovieRepository" as MovieJPA
            component "JpaRentalRepository" as RentalJPA
            
            component "MovieDbo" as MovieDBO
            component "RentalDbo" as RentalDBO
        }
    }
    
    package "Shared Infrastructure" {
        component "GlobalExceptionHandler" as GEH
        component "SecurityConfiguration" as SecConfig
        component "OpenApiConfiguration" as OpenApiConfig
        component "ApplicationConfiguration" as AppConfig
        component "LoggingUtils" as LogUtils
        
        component "ConflictException" as ConflictEx
        component "NotFoundException" as NotFoundEx
        component "InternalServerErrorException" as InternalEx
    }
}

package "External Systems" {
    database "H2 Database" as H2DB
    component "Spring Boot Framework" as SpringBoot
    component "MapStruct" as MapStruct
    component "JPA/Hibernate" as JPA
    component "Bean Validation" as BeanValidation
}

' User Service Internal Connections
UserSvc ..|> UserUC
LocationSvc ..|> LocationUC

UserSvc --> UserRP
LocationSvc --> LocationRP

UserRA ..|> UserRP
LocationRA ..|> LocationRP
CityRA ..|> CityRP
CountryRA ..|> CountryRP
RegionRA ..|> RegionRP
NeighborhoodRA ..|> NeighborhoodRP

UserCtrl --> UserUC
LocationCtrl --> LocationUC

' Movie Service Internal Connections
MovieSvc ..|> MovieUC
RentalSvc ..|> RentalUC

MovieSvc --> MovieRP
RentalSvc --> RentalRP

MovieRA ..|> MovieRP
RentalRA ..|> RentalRP

MovieCtrl --> MovieUC
RentalCtrl --> RentalUC

' Mapper Connections
UserSvc --> UserMap
LocationSvc --> LocationMap
MovieSvc --> MovieMap
RentalSvc --> RentalMap

UserRA --> UserMap
LocationRA --> LocationMap
MovieRA --> MovieMap
RentalRA --> RentalMap

' JPA Connections
UserRA --> UserJPA
LocationRA --> LocationJPA
CityRA --> CityJPA
CountryRA --> CountryJPA
RegionRA --> RegionJPA
NeighborhoodRA --> NeighborhoodJPA

MovieRA --> MovieJPA
RentalRA --> RentalJPA

UserJPA --> UserDBO
LocationJPA --> LocationDBO
CityJPA --> CityDBO
CountryJPA --> CountryDBO
RegionJPA --> RegionJPA
NeighborhoodJPA --> NeighborhoodDBO

MovieJPA --> MovieDBO
RentalJPA --> RentalDBO

' Database Connections
UserJPA --> H2DB
LocationJPA --> H2DB
CityJPA --> H2DB
CountryJPA --> H2DB
RegionJPA --> H2DB
NeighborhoodJPA --> H2DB
MovieJPA --> H2DB
RentalJPA --> H2DB

' Shared Infrastructure Connections
UserCtrl --> GEH
LocationCtrl --> GEH
MovieCtrl --> GEH
RentalCtrl --> GEH

UserSvc --> LogUtils
LocationSvc --> LogUtils
MovieSvc --> LogUtils
RentalSvc --> LogUtils

UserCtrl --> LogUtils
LocationCtrl --> LogUtils
MovieCtrl --> LogUtils
RentalCtrl --> LogUtils

' Framework Dependencies
UserCtrl --> SpringBoot
LocationCtrl --> SpringBoot
MovieCtrl --> SpringBoot
RentalCtrl --> SpringBoot

UserMap --> MapStruct
LocationMap --> MapStruct
MovieMap --> MapStruct
RentalMap --> MapStruct

UserJPA --> JPA
LocationJPA --> JPA
MovieJPA --> JPA
RentalJPA --> JPA

UserCtrl --> BeanValidation
LocationCtrl --> BeanValidation
MovieCtrl --> BeanValidation
RentalCtrl --> BeanValidation

note as GeneratedNote
**Generated Architecture Features:**

**Domain Entities:**
• User Service: User, Location, City, Country, Region, Neighborhood
• Movie Service: Movie, Rental

**CRUD Operations:**
• Complete Create, Read, Update, Delete for all entities
• Pagination and search functionality
• Complex geographic queries (regions by country, cities by region)

**Hexagonal Architecture:**
• Clean separation of concerns
• Dependency inversion principle
• Testable and maintainable code
• Framework-independent business logic

**Technical Stack:**
• Spring Boot 3 with Jakarta EE
• MapStruct for object mapping
• JPA/Hibernate for persistence
• Bean Validation for input validation
• H2 in-memory database
• Comprehensive test coverage (100%)
end note

@enduml